--- a/frontend/style.css
+++ b/frontend/style.css
@@ -11,3 +11,31 @@
   flex: 1 0 250px;
   margin: 10px;
 }
+.r-won::after {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: red;
+  top: 50%;
+}
+.c-won::after {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: red;
+  top: 50%;
+}
+.rd-won::after {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: red;
+  top: 50%;
+}
+.ld-won::after {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: red;
+  top: 50%;
+}
